tests/errors/sem_too_many_fun_args.kt
fun add(a: Int, b: Int): Int {
    return a + b
}

fun main() {
    add(5, 10, 15)
}
